# git-changelog

./: .gitignore  .mailmap  .pre-commit-config.yaml  README.md  make_test_data.sh  pyproject.toml
.github/workflows/: python-package.yml
src/jmullan/git_changelog/: authors.py  changelog.py  cli.py  models.py  stream.py  text.py
tests/: test_authors.py  test_changelog.py  through_01783c84fd85acfcde57e1ac7d2ae933ba75de6f.txt  through_c97a2b73b2128c114eda9d310e91be3ccce6c18f.txt
