[project]
name = "git-changelog"
version = "1.0.0"
description = "Produce a CHANGELOG from your git log."
authors = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"}
]
classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["git"]
dependencies = [
    "jmullan.logging@git+https://github.com/jmullan/jmullan.logging",
    "jmullan.cmd@git+https://github.com/jmullan/jmullan.cmd",
    "rich"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "pip",
    "pytest",
    "ruff"
]

[project.urls]
homepage = "https://github.com/jmullan/git-changelog"
documentation = "https://github.com/jmullan/git-changelog"
repository = "https://github.com/jmullan/git-changelog"

[project.scripts]
git-changelog = "jmullan.git_changelog.cli:main"
git-authors = "jmullan.git_changelog.authors:main"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.mypy]
namespace_packages = "true"
mypy_path = "src"
python_version = "3.13"
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code"
]
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/jmullan"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  # "D",   # pydocstyle
  "I",   # isort
]


[tool.ruff.lint.isort]
known-first-party = ["jmullan.git_changelog"]
known-local-folder = ["src"]
section-order = ["future", "standard-library", "third-party", "internal", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
internal = ["jmullan"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
